--- a/sui.csproj
+++ b/sui.csproj
@@ -71,6 +71,33 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy|AnyCPU'">
+    <OutputPath>bin\Deploy\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy|x64'">
+    <OutputPath>bin\x64\Deploy\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Deploy|x86'">
+    <OutputPath>bin\x86\Deploy\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x86</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -92,13 +119,19 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Location.resx</DependentUpon>
     </Compile>
+    <Compile Include="E.cs" />
+    <Compile Include="Forms\Items\ComboBox.cs" />
     <Compile Include="Forms\Form.cs" />
+    <Compile Include="Forms\Items\EditText.cs" />
+    <Compile Include="Forms\Items\Matrix.cs" />
     <Compile Include="Forms\Menu.cs" />
-    <Compile Include="Implement\Form.cs" />
+    <Compile Include="Forms\Notification.cs" />
+    <Compile Include="implement\Form.cs" />
     <Compile Include="Init.cs" />
-    <Compile Include="LException.cs" />
+    <Compile Include="SUIException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="R.cs" />
+    <Compile Include="ValueEx.cs" />
     <EmbeddedResource Include="content\Location.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Location.Designer.cs</LastGenOutput>
@@ -143,6 +176,12 @@
       <Name>klib</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include=".gitignore" />
+    <EmbeddedResource Include="content\icons\teamsoft1.bmp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="content\srf\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
